# aptoide-challenge

./: README.md  client.py  conftest.py  main.py  main_test.py  pyproject.toml
app/: logging.py  services.py  transactions.py  transactions_test.py  values.py
database/: models.py  queries.py  setup.py
