[tool.poetry]
name = "aptoide"
version = "0.0.1"
description = "Code assignment for Aptoide challenge"
authors = ["Eduardo Cordeiro eduardoalcordeiro@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
sqlmodel = "^0.0.8"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80
target-version = ['py311']
include = '\.pyi?$'